# fcgi2

./: .cvsignore  .gitignore  AUTHORS  FastCGI.mak.in  FastCGI.mb  Makefile.am  Makefile.in  Makefile.nt  README  README.md  README.supervise  README_NT.txt  acconfig.h  acinclude.m4  autogen.sh  build.bat  build_no_shell.bat  clean.sh  config.guess  config.sub  configure  configure.ac  configure.in  dependencies.in  descrip.dfc  fcgi++.pc.in  fcgi.pc.in  index.html  ltmain.sh  version.conf  version.in
.circleci/: config.yml
.github/workflows/: build.yml
Win32/: .cvsignore  .gitignore  FastCGI.dsw  authorizer.dsp  cgifcgi.dsp  config_h.dsp  echo-cpp.dsp  echo.dsp  echox.dsp  lib.dsp  libfcgi.dsp  logdump.dsp  size.dsp  store.dsp  threaded.dsp
cgi-fcgi/: .cvsignore  .gitignore  Makefile.am  Makefile.in  cgi-fcgi.c  cgi-fcgi.mak  cgi-fcgi.mak.in  cgi-fcgi.mdp  descrip.dfc
doc/: .cvsignore  .gitignore  FCGI_Accept.3  FCGI_Finish.3  FCGI_SetExitStatus.3  FCGI_StartFilterData.3  Makefile  cgi-fcgi.1  fcgi-devel-kit.gut  fcgi-devel-kit.htm  fcgi-java.gut  fcgi-java.htm  fcgi-perf.gut  fcgi-perf.htm  fcgi-perl.gut  fcgi-perl.htm  fcgi-spec.html  fcgi-tcl.gut  fcgi-tcl.htm  overview.html  www5-api-workshop.html
doc/fastcgi-prog-guide/: ap_guida.htm  ap_guide.htm  apaman.htm  ch1intro.htm  ch2c.htm  ch3perl.htm  ch4tcl.htm  cover.htm
doc/fastcgi-whitepaper/: Makefile  fastcgi.htm
examples/: .cvsignore  .gitignore  Makefile.am  Makefile.in  authorizer.c  authorizer.mak  echo-cpp.cpp  echo-cpp.mak  echo-perl  echo-tcl  echo-x-socket.c  echo-x.c  echo.c  echo.cgi  echo.html  echo.mak  echo2.c  echo2.html  echo2.mak  echo2_nt.fcgi  echo_nt.fcgi  echox.mak  echoxsocket.mak  log-dump.c  sample-store.c  size.mak  tclHash.c  test.html  threaded.c  tiny-authorizer.c  tiny-cgi.c  tiny-fcgi.c  tiny-fcgi.cgi  tiny-fcgi.mak  tiny-fcgi2.c  tiny-fcgi2.cgi  tiny-fcgi2.mak  tiny-fcgi2_nt.fcgi  tiny-fcgi_nt.fcgi  tiny-perl-fcgi  (+1 more)
examples/SampleStore/: .cvsignore  sample-store.c  tcl.h  tclHash.c  tclInt.h  tclRegexp.h
examples/SampleStore/Protected/: RMSTitanic.html
examples/SampleStore/Unprotected/: Purchase.html  ThankYou.html
examples/conf/: om-httpd.config
include/: .cvsignore  .gitignore  Makefile.am  fastcgi.h  fcgi_config.h.in  fcgi_config_x86.h  fcgi_stdio.h  fcgiapp.h  fcgiappmisc.h  fcgimisc.h  fcgio.h  fcgios.h  tcl.h  tclInt.h
java/: FCGIGlobalDefs.java  FCGIInputStream.java  FCGIInterface.java  FCGIMessage.java  FCGIOutputStream.java  FCGIRequest.java
java/src/: FCGIGlobalDefs.java  FCGIInputStream.java  FCGIInterface.java  FCGIMessage.java  FCGIOutputStream.java  FCGIRequest.java
libfcgi/: .cvsignore  Makefile.am  Makefile.in  descrip.dfc  fcgi_stdio.c  fcgiapp.c  fcgio.cpp  libfcgi.mak  libfcgi.mak.in  os_unix.c  os_win32.c  strerror.c
perl/: .cvsignore  .gitignore  ChangeLog  FCGI.PL  FCGI.XL  FCGI.pm  FCGI.xs  MANIFEST  MANIFEST.SKIP  Makefile.PL  README  configure  configure.ac  configure.in  configure.readme  distrib  echo.PL  test.pl  threaded.PL  typemap  version.pm
perl/eg/: echo.pl  remote.pl  threaded.pl
perl/t/: 02-unix_domain_socket.t
tcl/common/: tclAppInit.c  tclFCGI.c
tcl/tcl7.4/: Makefile.in  configure.in
