#
#  Makefile for FastCGI development kit
#
#  $Id: Makefile.am,v 1.5 2001/11/28 03:04:37 robs Exp $
#

SUBDIRS = libfcgi cgi-fcgi examples include

include_HEADERS = fcgi_config.h

EXTRA_DIST = LICENSE.TERMS		\
             Makefile.nt		\
             cgi-fcgi/cgi-fcgi.mak	\
             examples/authorizer.mak	\
             examples/echo.mak		\
             examples/echox.mak		\
             examples/size.mak		\
             examples/echo-cpp.mak	\
             libfcgi/libfcgi.mak	\
             include/fcgi_config_x86.h	\
             java/FCGIGlobalDefs.java	\
             java/FCGIInputStream.java	\
             java/FCGIInterface.java	\
             java/FCGIMessage.java	\
             java/FCGIOutputStream.java	\
             java/FCGIRequest.java	\
             perl/ChangeLog		\
             perl/FCGI.PL		\
             perl/FCGI.XL		\
             perl/MANIFEST		\
             perl/Makefile.PL		\
             perl/README		\
             perl/aclocal.m4		\
             perl/configure		\
             perl/configure.in		\
             perl/echo.PL		\
             perl/fcgi_config.h.in	\
             perl/oldinterface.pod	\
             perl/remote.PL		\
             perl/threaded.PL		\
             perl/typemap		\
             perl/version.pm		\
             Win32/FastCGI.dsw		\
             Win32/authorizer.dsp	\
             Win32/cgifcgi.dsp		\
             Win32/echo-cpp.dsp		\
             Win32/echo.dsp		\
             Win32/echox.dsp		\
             Win32/libfcgi.dsp		\
             Win32/logdump.dsp		\
             Win32/size.dsp		\
             Win32/threaded.dsp		\
             doc/FCGI_Accept.3          \
             doc/FCGI_Finish.3          \
             doc/FCGI_SetExitStatus.3   \
             doc/FCGI_StartFilterData.3 \
             doc/cgi-fcgi.1             \
             doc/fcgi-devel-kit.htm     \
             doc/fcgi-java.htm          \
             doc/fcgi-perf.htm          \
             doc/fcgi-perl.htm          \
             doc/fcgi-spec.html         \
             doc/fcgi-tcl.htm           \
             doc/omi-logo.gif           \
             doc/overview.html          \
             doc/www5-api-workshop.html \
             doc/fastcgi-prog-guide/ap_guida.htm        \
             doc/fastcgi-prog-guide/ap_guide.htm        \
             doc/fastcgi-prog-guide/apaman.htm          \
             doc/fastcgi-prog-guide/ch1inta1.gif        \
             doc/fastcgi-prog-guide/ch1intra.gif        \
             doc/fastcgi-prog-guide/ch1intro.htm        \
             doc/fastcgi-prog-guide/ch2c.htm            \
             doc/fastcgi-prog-guide/ch3perl.htm         \
             doc/fastcgi-prog-guide/ch4tcl.htm          \
             doc/fastcgi-prog-guide/cover.htm           \
             doc/fastcgi-prog-guide/covera.gif          \
             doc/fastcgi-whitepaper/fastcgi.htm         \
             doc/fastcgi-whitepaper/img00001.gif        \
             doc/fastcgi-whitepaper/img00002.gif        \
             doc/fastcgi-whitepaper/img00003.gif

